--- a/packages/core/src/components/go-button/go-button.scss
+++ b/packages/core/src/components/go-button/go-button.scss
@@ -128,6 +128,7 @@ go-button {
       height: var(--go-btn-icon-size);
       padding: 0;
       text-align: center;
+      line-height: 1;
     }
   }
 
